re PR c++/16171 ([ABI] Problems with standard names in different namespaces)

PR c++/16171
	* g++.dg/abi/mangle26.C: New test.
	* g++.dg/abi/mangle27.C: New test.
	* g++.dg/abi/mangle28.C: New test.
	* g++.dg/abi/mangle29.C: New test.

	PR c++/16171
	* mangle.c (find_substitution): Do not use special substitutions
	for identifiers not in std::.

From-SVN: r104230